# LifeClaw

./: .gitignore  .npmignore  Dockerfile  README.md  install.ps1  install.sh  package.json  pyproject.toml
lifeclaw/: __init__.py  __main__.py
lifeclaw/agent/: economics.py  loop.py  memory.py  metaclaw.py  subagent.py  tools.py
lifeclaw/channels/: __init__.py  base.py  discord_ch.py  registry.py  slack.py  telegram.py  webchat.py
lifeclaw/cli/: commands.py  stream.py
lifeclaw/config/: defaults.py  loader.py  schema.py  setup.py
lifeclaw/cron/: __init__.py  scheduler.py
lifeclaw/gateway/: __init__.py  server.py
lifeclaw/mcp/: client.py
lifeclaw/providers/: anthropic_provider.py  base.py  ollama.py  openai_compat.py  registry.py
lifeclaw/research/: __init__.py  knowledge_base.py  literature.py  pipeline.py
lifeclaw/server/: static.py  websocket.py
lifeclaw/skills/: manager.py
lifeclaw/themes/: __init__.py
lifeclaw/websearch/: __init__.py  search.py
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/app/: App.tsx  globals.css  layout.tsx  page.tsx
web/components/: chat-view.tsx  mcp-view.tsx  settings-view.tsx  sidebar.tsx  skills-view.tsx  themes-view.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
web/lib/: themes.ts  websocket.ts
